[gd_scene load_steps=17 format=2]

[ext_resource path="res://scenes/minigames/background.png" type="Texture" id=1]
[ext_resource path="res://sounds/Signs_Of_Life_in_House_3_Kicks__Chords_loop.ogg" type="AudioStream" id=2]
[ext_resource path="res://scripts/minigames/ecg/ecgcurve.gd" type="Script" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://sounds/heart1.ogg" type="AudioStream" id=6]
[ext_resource path="res://sounds/heart2.ogg" type="AudioStream" id=7]
[ext_resource path="res://scenes/minigames/AudioStreamPlayer2D.gd" type="Script" id=8]
[ext_resource path="res://scenes/minigames/Player.gd" type="Script" id=9]
[ext_resource path="res://scenes/minigames/Trail.gd" type="Script" id=11]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array(  )
}

[sub_resource type="Gradient" id=6]
colors = PoolColorArray( 0.470588, 0.827451, 0.32549, 0, 0.470588, 0.827451, 0.32549, 1 )

[sub_resource type="Gradient" id=7]
colors = PoolColorArray( 0.827451, 0.32549, 0.32549, 0, 0.827451, 0.32549, 0.32549, 1 )

[sub_resource type="CircleShape2D" id=2]
radius = 2.0

[sub_resource type="Gradient" id=3]

[sub_resource type="Gradient" id=4]
colors = PoolColorArray( 0.45098, 0.756863, 0.337255, 0, 0.45098, 0.756863, 0.337255, 1 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 12000, 1000 )

[node name="Node2D" type="Node2D"]

[node name="Beat1" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 130, 135 )
stream = ExtResource( 6 )
script = ExtResource( 8 )

[node name="Beat2" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 390, 135 )
stream = ExtResource( 7 )
script = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 480, 270 )

[node name="BackgroundLine" type="Line2D" parent="."]
visible = false
position = Vector2( 0, 140 )
width = 2.0
default_color = Color( 0.709804, 0.929412, 0.529412, 0.0745098 )

[node name="BackgroundLine2" type="Line2D" parent="."]
visible = false
position = Vector2( 0, 140 )
width = 2.0
default_color = Color( 1, 1, 1, 0.321569 )

[node name="Path2D" type="Path2D" parent="."]
visible = false
position = Vector2( 0, 140 )
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
visible = false
rotate = false
script = ExtResource( 3 )
bgline_path = NodePath("../../BackgroundLine")
play = true
bpm = 60

[node name="Path2D2" type="Path2D" parent="."]
visible = false
position = Vector2( 0, 140 )
curve = SubResource( 1 )

[node name="PathFollow2D2" type="PathFollow2D" parent="Path2D2"]
visible = false
rotate = false
script = ExtResource( 3 )
bgline_path = NodePath("../../BackgroundLine2")
scaling = 180
bpm = 60
progress = 1.0

[node name="KinematicBody2D2" type="KinematicBody2D" parent="."]
script = ExtResource( 9 )
gradient1 = SubResource( 6 )
gradient2 = SubResource( 7 )

[node name="Sprite" type="Sprite" parent="KinematicBody2D2"]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D2"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="KinematicBody2D2"]
process_mode = 0
wait_time = 0.938
autostart = true

[node name="LineA" type="Line2D" parent="."]
width = 14.0
gradient = SubResource( 3 )
joint_mode = 2
begin_cap_mode = 2
script = ExtResource( 11 )
grad = SubResource( 4 )

[node name="LineB" type="Line2D" parent="."]
points = PoolVector2Array( 1597.6, 1727.45 )
width = 14.0
gradient = SubResource( 3 )
joint_mode = 2
begin_cap_mode = 2
script = ExtResource( 11 )
grad = SubResource( 4 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 284.884, 1602.75 )
shape = SubResource( 5 )

[node name="BGM" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 240, 135 )
stream = ExtResource( 2 )
autoplay = true

[connection signal="timeout" from="KinematicBody2D2/Timer" to="KinematicBody2D2" method="_on_Timer_timeout"]
